--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,13 +11,17 @@
 
 @layer base {
 	body {
-		@apply text-tertiary;
+		@apply text-tertiary bg-background;
 	}
 }
 
 @layer components {
 	h1 {
 		@apply text-2xl font-bold;
+	}
+
+	h2 {
+		@apply bg-gray-800 p-4 text-xl text-center;
 	}
 
 	nav {
@@ -34,5 +38,13 @@
 
 	.navLink:hover {
 		@apply text-white;
+	}
+
+	button {
+		@apply py-4 px-8 bg-accent rounded-full transition-colors duration-200 cursor-pointer;
+	}
+
+	button:hover {
+		@apply bg-highlight;
 	}
 }
