--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,8 @@
 	--color-tertiary: #dfdfdf; /* Text color (gold) */
 	--color-accent: #ffd700; /* Additional accents (gold) */
 	--color-highlight: #ffc700; /* Highlights (gold) */
+
+	--font-display: helvetica, sans-serif;
 }
 
 @layer base {
@@ -17,7 +19,7 @@
 
 @layer components {
 	h1 {
-		@apply text-3xl font-bold text-accent;
+		@apply text-3xl font-bold;
 	}
 
 	h2 {
@@ -45,7 +47,7 @@
 	}
 
 	.navLink {
-		@apply border-b-4 border-transparent py-8 text-lg text-accent transition-colors duration-200;
+		@apply border-b-4 border-transparent py-8 text-lg transition-colors duration-200;
 	}
 
 	.navLink:hover {
