Signup now has criteria, delete endpoint added (need to figure out deleting from both db and backend

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,7 @@
 
 @theme {
 	--color-primary: #0a0a0a; /* Used for header backgrounds/elements */
-	--color-background: #0f0f0f; /* Overall background */
+	--color-background: #161616; /* Overall background */
 	--color-secondary: #ffd700; /* Accent elements (gold) */
 	--color-tertiary: #dfdfdf; /* Text color (gold) */
 	--color-accent: #ffd700; /* Additional accents (gold) */
